--- a/index.html
+++ b/index.html
@@ -41,8 +41,11 @@
             <div class="container center">
             <h2>Nosotros</h2>
             <p class="subtitle">
-                Somos una agencia de experiencias y activaciones para eventos.
-                Nos especializamos en diseñar soluciones a la medida, coordinando proveedores, producción y ambientación para que cada evento se ejecute tal como el cliente lo imagina.
+                Velum Experiences es una agencia especializada en planeación, producción y ejecución de experiencias
+                para eventos sociales, corporativos y de marca.
+
+                Nuestro enfoque se basa en la estética, el control
+                operativo y la atención al detalle, para que nosotros coordinemos y tú disfrutes de tu evento
             </p>
 
             <div class="grid-3">
