--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <img src="img/logo.png" alt="Velum Experiences" class="logo"/>
             <h1 class="sr-only">Velum Experiences</h1>
             <p>
-                Diseñamos experiencias para eventos sin límites predefinidos.
-                Nos encargamos de encontrar, coordinar y ejecutar exactamente lo que tu evento necesita.
+                Diseñamos experiencias a medida, que se viven y recuerdan.
+                Planeamos, producimos y ejecutamos eventos sociales, corporativos y de marca, cuidando cada detalle desde la idea hasta la ejecución.
             </p>
             <a
                 href="https://wa.me/5566674062?text=Hola%2C%20quisiera%20solicitar%20una%20cotizaci%C3%B3n%20de%20servicios%20para%20un%20evento.%20%C2%BFPodr%C3%ADan%20brindarme%20informaci%C3%B3n%20y%20opciones%20disponibles%3F"
@@ -51,15 +51,15 @@
             <div class="grid-3">
                 <div>
                 <h3>Producción Integral</h3>
-                <p>Coordinamos cada aspecto del evento para garantizar una ejecución impecable.</p>
+                <p>Nos encargamos de la planeación, coordinación y ejecución del evento con control total de cada etapa, garantizando tiempos, calidad y una operación sin imprevistos.</p>
                 </div>
                 <div>
                 <h3>Atención Personalizada</h3>
-                <p>Acompañamiento cercano y soluciones a la medida de cada cliente.</p>
+                <p>Trabajamos de la mano con cada cliente, entendiendo objetivos, presupuesto y visión para crear soluciones a la medida, claras y bien ejecutadas.</p>
                 </div>
                 <div>
                 <h3>Experiencias Memorables</h3>
-                <p>Diseñamos momentos que conectan emocionalmente con los asistentes.</p>
+                <p>Diseñamos experiencias únicas que conectan con los asistentes, elevan la percepción del evento y dejan una impresión memorable.</p>
                 </div>
             </div>
             </div>
@@ -67,37 +67,64 @@
 
         <section id="servicios" class="services">
             <div class="container center">
-            <h2>Nuestros Servicios</h2>
-            <br /><br />
-            <div class="grid-3">
-                <div class="card">
-                <div class="card-img">
-                    <img src="./img/imgAct.jpg" alt="">
+                <h2>Nuestros Servicios</h2>
+                <br /><br />
+                <div class="grid-3">
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./img/imgAct.jpg" alt="">
+                        </div>
+                        <div class="card-body">
+                            <h3>Activaciones de marca</h3>
+                            <p>Diseñamos activaciones que convierten espacios en experiencias, creamos puntos de interacción visual y emocional que generan impacto, ideales para eventos sociales, comerciales y de marca.</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./img/imgTec.jpg">
+                        </div>
+                        <div class="card-body">
+                            <h3>Producción y event planning</h3>
+                            <p>Planeamos, producimos y ejecutamos eventos de principio a fin. Nos encargamos de cada detalle para que el cliente solo se enfoque en vivir la experiencia.</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./img/imgAmbi.jpg" alt="">
+                        </div>
+                        <div class="card-body">
+                            <h3>Eventos sociales premium</h3>
+                            <p>Creamos celebraciones únicas que se viven como experiencias. Diseño, producción y ejecución para eventos sociales que buscan elegancia, impacto y emoción.</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./img/imgAmbi.jpg" alt="">
+                        </div>
+                        <div class="card-body">
+                            <h3>Locaciones</h3>
+                            <p>Contamos con locaciones estratégicas en la Ciudad de México, ideales para eventos sociales y corporativos, listas para transformarse en experiencias memorables.</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./img/imgAmbi.jpg" alt="">
+                        </div>
+                        <div class="card-body">
+                            <h3>Servicios técnicos</h3>
+                            <p>Tecnología y operación técnica al servicio de la experiencia. Contamos con equipo profesional y personal capacitado para garantizar una ejecución impecable.</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./img/imgAmbi.jpg" alt="">
+                        </div>
+                        <div class="card-body">
+                            <h3>Mobiliario</h3>
+                            <p>Mobiliario diseñado para crear zonas de convivencia, descanso y estilo, elevando la experiencia del invitado y la estética del evento.</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="card-body">
-                    <h3>Activaciones y Experiencias</h3>
-                    <p>Soluciones profesionales diseñadas para elevar la experiencia de tu evento.</p>
-                </div>
-                </div>
-                <div class="card">
-                <div class="card-img">
-                    <img src="./img/imgTec.jpg">
-                </div>
-                <div class="card-body">
-                    <h3>Producción y Técnica</h3>
-                    <p>Soluciones profesionales diseñadas para elevar la experiencia de tu evento.</p>
-                </div>
-                </div>
-                <div class="card">
-                <div class="card-img">
-                    <img src="./img/imgAmbi.jpg" alt="">
-                </div>
-                <div class="card-body">
-                    <h3>Ambientación</h3>
-                    <p>Soluciones profesionales diseñadas para elevar la experiencia de tu evento.</p>
-                </div>
-                </div>
-            </div>
             </div>
         </section>
 
@@ -130,8 +157,6 @@
                 <div>
                     <img src="./img/img8.jpg">
                 </div>
-            </div>
-            </div>
         </section>
 
         <section id="cotizar" class="cta">
