--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="grid-3">
                     <div class="card">
                         <div class="card-img">
-                            <img src="./img/imgAct.jpg" alt="">
+                            <img src="./img/imgAct.jpeg">
                         </div>
                         <div class="card-body">
                             <h3>Activaciones de marca</h3>
@@ -81,7 +81,7 @@
                     </div>
                     <div class="card">
                         <div class="card-img">
-                            <img src="./img/imgTec.jpg">
+                            <img src="./img/imgProd.jpeg">
                         </div>
                         <div class="card-body">
                             <h3>Producción y event planning</h3>
@@ -90,7 +90,7 @@
                     </div>
                     <div class="card">
                         <div class="card-img">
-                            <img src="./img/imgAmbi.jpg" alt="">
+                            <img src="./img/imgSoc.jpeg">
                         </div>
                         <div class="card-body">
                             <h3>Eventos sociales premium</h3>
@@ -99,7 +99,7 @@
                     </div>
                     <div class="card">
                         <div class="card-img">
-                            <img src="./img/imgAmbi.jpg" alt="">
+                            <img src="./img/imgLoc.jpeg">
                         </div>
                         <div class="card-body">
                             <h3>Locaciones</h3>
@@ -108,7 +108,7 @@
                     </div>
                     <div class="card">
                         <div class="card-img">
-                            <img src="./img/imgAmbi.jpg" alt="">
+                            <img src="./img/imgTec.jpeg">
                         </div>
                         <div class="card-body">
                             <h3>Servicios técnicos</h3>
@@ -117,7 +117,7 @@
                     </div>
                     <div class="card">
                         <div class="card-img">
-                            <img src="./img/imgAmbi.jpg" alt="">
+                            <img src="./img/imgMob.jpeg">
                         </div>
                         <div class="card-body">
                             <h3>Mobiliario</h3>
